2009-11-16 Riccardo Mottola <rmottola@users.sf.net>

	* Source\win32\WIN32Server.m: Remove left-over call to a mouse down event in a mouse-up
	
2009-11-10 Richard Frith-Macdonald <rfm@gnu.org>

	* Source\win32\WIN32Server.m: Track mouse button state so that when
	mouse down events are lost (which appears occasionally to be the case)
	we can simulate the missing event.

2009-11-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-windowDevice:): Don't return a
	static variable as the window device.	

2009-11-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m: Set the colour for all text drawing.

2009-11-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSGState.m (-setColor:state:): Don't handle alpha specially.
	* Source/cairo/CairoGState.m: Clean up last change.

2009-11-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source\winlib\WIN32GState.m: Fixes for read image.
	* Source\win32\WIN32Server.m: Use layered window for alpha.

2009-11-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m: Set the fill or stroke colour
	immediatly before the drawing.
	* Source/art/ARTGState.m (-setColor:state:): Handle stroke colour
	correctly.

2009-11-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-compositeGState:...): Use the
	offset adjustment for cairo > 1.8 in the general case.

2009-11-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/WIN32GState.m: first hack at GSReadRect implementation.

2009-11-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/x11/XGServerWindow.m (setWindowHintsForStyle): Revert
	change to (Motif) window style hints that would add a border
	around appicons and miniwindows on some window managers.

	* Source/x11/XGServerWindow.m (-miniwindow): Remove code that can
	make programs unresponsive during window miniaturization.

2009-10-31 Thomas Gamper <icicle@cg.tuwien.ac.at>

	* Source/x11/XGGLFormat.m
	Check explicitly for GLX_SAMPLES and GLX_SAMPLE_BUFFERS.
