@@ -1,6 +1,12 @@
+2009-11-19 Doug Simons
+
+	* Source/x11/XGServerWindow.m:
+	Make sure we return current window bounds.
+
 2009-11-16 Riccardo Mottola <rmottola@users.sf.net>
 
-	* Source\win32\WIN32Server.m: Remove left-over call to a mouse down event in a mouse-up
+	* Source\win32\WIN32Server.m: Remove left-over call to a mouse down
+	event in a mouse-up
 	
 2009-11-10 Richard Frith-Macdonald <rfm@gnu.org>
 
